fix(db,js): fix initialise within db.js and add middleware express-validator

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "hooks": {
       "pre-commit": "npx lint-staged"
     }
+  },
+  "dependencies": {
+    "express-validator": "^7.0.1"
   }
 }
