feat(auth): add user-registration and email verification

--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -3,5 +3,10 @@ PORT=8000
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=Kepuhrubuh1994
-DB_NAME=pure
+DB_PASSWORD=
+DB_NAME=database
+JWT_SECRET_KEY=pure
+
+GMAIL_USER= pureluxwear@gmail.com
+GMAIL_PASS= iiwyleoekyiliite
+FE_BASE_URL=http://localhost:5173
