--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,10 +11,15 @@
     "sequelize": "npx sequelize-cli"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.7",
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
