--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,10 +11,18 @@
     "test": "npx cypress verify & cypress run --component"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.0.18",
     "axios": "^1.6.2",
+    "formik": "^2.4.5",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
