--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -5,3 +5,9 @@ DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=
 DB_NAME=database
+JWT_SECRET_KEY=pure
+
+GMAIL_USER= pureluxwear@gmail.com
+GMAIL_PASS= iiwyleoekyiliite
+FE_BASE_URL=http://localhost:5173
+
