--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-spinners": "^0.13.8",
+    "swiper": "^11.0.5",
     "yup": "^1.3.3"
   },
   "devDependencies": {
