--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "semi": false,
+  "printWidth": 100,
+  "tabWidth": 2,
+  "jsxBracketSameLine": false,
+  "jsxSingleQuote": false
 }
