--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "axios": "^1.6.2",
+    "capitalize": "^2.0.4",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "process": "^0.11.10",
