(feat) add get current location & sync it with opencage

--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -14,3 +14,5 @@ FE_BASE_URL=http://localhost:5173
 
 MIDTRANS_CLIENT_KEY=
 MIDTRANS_SERVER_KEY=
+
+OPENCAGE_API_KEY=5113ce34400a461db98d5ce4fca8401f
