--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,10 +18,11 @@
     "express-validator": "^7.0.1",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
     "midtrans-client": "^1.3.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
+    "opencage-api-client": "^1.0.3",
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
