--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "capitalize": "^2.0.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
     "midtrans-client": "^1.3.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
     "sequelize": "^6.35.1"
