--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,8 +18,8 @@
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
-    "firebase": "^10.7.1",
     "capitalize": "^2.0.4",
+    "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "process": "^0.11.10",
@@ -30,6 +30,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-spinners": "^0.13.8",
+    "slug": "^8.2.3",
     "swiper": "^11.0.5",
     "yup": "^1.3.3"
   },
