fix(product): add product search feature, and also responsive

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     }
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1"
+    "@chakra-ui/icons": "^2.1.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   }
 }
