--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     }
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1"
+    "@chakra-ui/icons": "^2.1.1",
+    "lodash": "^4.17.21"
   }
 }
