--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -15,4 +15,4 @@ FE_BASE_URL=http://localhost:5173
 MIDTRANS_CLIENT_KEY=
 MIDTRANS_SERVER_KEY=
 
-OPENCAGE_API_KEY=5113ce34400a461db98d5ce4fca8401f
+OPENCAGE_API_KEY=
