--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -1,2 +1,2 @@
 VITE_API_URL=http://localhost:8000/api/
-VITE_APP_IMAGE_URL = http://localhost:8000/api/uploads
+VITE_APP_API_IMAGE_URL = http://localhost:8000/api/uploads
