--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,11 +22,13 @@
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
+    "leaflet": "^1.9.4",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-spinners": "^0.13.8",
