feat(order-list): create front end order list

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,10 +19,12 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "capitalize": "^2.0.4",
+    "clipboard-copy": "^4.0.1",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "process": "^0.11.10",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
