--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
+    "opencage-api-client": "^1.0.3",
     "qrcode.react": "^3.1.0",
     "sequelize": "^6.35.1"
   },
