--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "test": "npx cypress verify & cypress run --component"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@develoka/angka-rupiah-js": "^1.0.3",
     "@emotion/react": "^11.11.1",
