--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
     "react-leaflet": "^4.2.1",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-spinners": "^0.13.8",
