--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,8 +21,11 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
+    "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.7",
     "opencage-api-client": "^1.0.3",
     "qrcode.react": "^3.1.0",
