--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,7 +28,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          source: './apps/web/build,./apps/web/package.json,./apps/api/dist/*,./projects/api/package.json,./deploy.config.js,./package*.json'
+          source: './apps/web/dist,./apps/web/package.json,./apps/api/dist/*,./projects/api/package.json,./deploy.config.js,./package*.json'
           target: '${{ secrets.SSH_FOLDER }}'
       - name: Run App
         uses: appleboy/ssh-action@master
