(fix) fix notification

--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -1,3 +1,4 @@
 VITE_API_URL=http://localhost:8000/api/
 VITE_URL=http://localhost:8000/
 VITE_APP_API_IMAGE_URL = http://localhost:8000/api/uploads
+MIDTRANS_CLIENT_KEY=SB-Mid-client-QOCmKfVOf_yqh7La
